@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2008, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2009, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,7 +27,7 @@
  * ----------------------
  * YIntervalRenderer.java
  * ----------------------
- * (C) Copyright 2002-2008, by Object Refinery Limited.
+ * (C) Copyright 2002-2009, by Object Refinery Limited.
  *
  * Original Author:  David Gilbert (for Object Refinery Limited);
  * Contributor(s):   -;
@@ -44,6 +44,7 @@
  * 11-Nov-2004 : Now uses ShapeUtilities to translate shapes (DG);
  * 11-Apr-2008 : New override for findRangeBounds() (DG);
  * 26-May-2008 : Added item label support (DG);
+ * 27-Mar-2009 : Updated findRangeBounds() (DG);
  *
  */
 
@@ -152,12 +153,7 @@ public class YIntervalRenderer extends AbstractXYItemRenderer
      *         or empty).
      */
     public Range findRangeBounds(XYDataset dataset) {
-        if (dataset != null) {
-            return DatasetUtilities.findRangeBounds(dataset, true);
-        }
-        else {
-            return null;
-        }
+        return findRangeBounds(dataset, true);
     }
 
     /**
