@@ -1,5 +1,10 @@
 2009-03-27  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/renderer/xy/YIntervalRenderer.java
+    (findRangeBounds): Use new inherited method.
+
+2009-03-27  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/renderer/RendererUtilities.java
     (findLiveItemsLowerBound): Fixed results for unsorted dataset,
     (findLiveItemsUpperBound): Likewise,
